# SYLVIE

./: README.md  pyproject.toml
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.css  page.tsx
frontend/src/app/components/: index.tsx
frontend/src/app/components/blob/: blob.tsx
frontend/src/app/components/chatbox/: Chatbox.tsx
frontend/src/app/components/logo/: Logo.tsx
sylvie/: __init__.py
