[tool.poetry]
name = "sylvie"
version = "0.1.0"
description = "SYLVIE, your new virtual companion! SYLVIE (Synthetic Virtual Intelligence Entity) is here to assist you in various tasks and provide companionship whenever you need it. Whether you're looking for information, seeking assistance, or simply want someone to chat with, SYLVIE is always here to help."
authors = ["Kacper Szot <kacperszot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
